给主页增加咨询培训

--- a/style/common.css
+++ b/style/common.css
@@ -12,14 +12,9 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol, dl, dt, d
   box-sizing: border-box;
 }
 
-header, footer {
-  min-width: 1300px;
-}
-
 .container {
-  width: 80%;
   margin: 0 auto;
-  min-width: 1600px;
+  width: 1500px;
 }
 
 /*顶部栏*/
