--- a/style/common.css
+++ b/style/common.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+body, html {
+  font: 14px/1.5 ,"PingFang SC","微软雅黑","Microsoft YaHei",Helvetica,"Helvetica Neue",Tahoma,Arial,sans-serif;
+}
+
 body, div, span, header, footer, nav, section, aside, article, ul, ol, dl, dt, dd, li, a, p, h1, h2, h3, h4, h5, h6, i, b, textarea, button, input, select, figure {
   padding: 0;
   margin: 0;
@@ -14,7 +18,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol, dl, dt, d
 
 .container {
   margin: 0 auto;
-  width: 1500px;
+  width: 1200px;
 }
 
 /*顶部栏*/
