--- a/style/common.scss
+++ b/style/common.scss
@@ -1,5 +1,7 @@
 @import 'mixin.scss';
-
+body,html{
+    font:14px/1.5 ,"PingFang SC","微软雅黑","Microsoft YaHei",Helvetica,"Helvetica Neue",Tahoma,Arial,sans-serif;
+}
 body, div, span, header, footer, nav, section, aside, article, ul, ol,dl, dt, dd, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure
 {
     padding: 0;
@@ -12,13 +14,12 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol,dl, dt, dd
     font-weight: normal;
     font-family: "Microsoft Yahei";
     box-sizing: border-box;
-  
 }
 
 .container{
     // width: 80%;
     margin: 0 auto;
-    width: 1500px;
+    width: 1200px;
     
 }
 
