--- a/style/index.css
+++ b/style/index.css
@@ -97,7 +97,7 @@ header {
 
 .banner li img {
   width: 100%;
-  height: 750px !important;
+  height: 650px !important;
 }
 
 .dots {
@@ -167,7 +167,7 @@ header {
 /*科研资讯-左 大图资讯*/
 .newsLeft {
   display: inline-block;
-  width: 560px;
+  width: 360px;
   margin-left: 10px;
   /*左边图*/
   /*左边新闻标题*/
@@ -175,7 +175,7 @@ header {
 }
 
 .newsLeft a img {
-  width: 560px;
+  width: 360px;
 }
 
 .newsLeft a img:hover {
@@ -205,16 +205,18 @@ header {
 }
 
 .news-box {
-  width: 890px;
+  width: 750px;
 }
 
 /*新闻链接*/
 .new-item {
-  width: 400px;
+  width: 340px;
   margin: 0 30px 50px 0;
   display: inline-block;
   position: relative;
   transition: all .4s;
+  font-size: 18px;
+  float: right;
   /*新闻链接下面的横线*/
   /*过渡效果*/
 }
@@ -247,7 +249,7 @@ header {
 /*科学研究、科研成果、学术交流*/
 .mixLeft {
   display: inline-block;
-  width: 960px;
+  width: 760px;
   margin-left: 10px;
 }
 
@@ -286,7 +288,7 @@ header {
 
 .secient-content {
   float: right;
-  width: 600px;
+  width: 400px;
 }
 
 .secient-content p {
@@ -297,8 +299,8 @@ header {
 
 .box2-box {
   background-color: #6AC7CE;
-  width: 900px;
-  margin: 40px auto 0 auto;
+  display: inline-block;
+  margin: 0 auto;
   height: 250px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -310,13 +312,11 @@ header {
 }
 
 .box2-item {
-  display: inline-block;
-  width: 300px;
+  width: 240px;
   height: 50%;
-  position: relative;
   float: left;
-  text-align: left;
   padding: 20px;
+  font-size: 18px;
   border: 1px solid white;
   border-bottom: 0;
   border-left: 0;
@@ -355,11 +355,13 @@ header {
 
 /*mix的右边框*/
 .mixRight {
+  width: 400px;
   margin-top: 40px;
   float: right;
 }
 
 .pic-box {
+  width: 100%;
   margin: 40px 40px 60px 0;
   display: block;
   height: 250px;
@@ -400,7 +402,7 @@ header {
 }
 
 .pic-box img {
-  width: 300px;
+  width: 288px;
   height: 100%;
 }
 
@@ -427,7 +429,7 @@ header {
 }
 
 .index-card {
-  width: 400px;
+  width: 300px;
   height: 90px;
   display: inline-block;
   margin-left: 70px;
@@ -478,6 +480,8 @@ header {
   width: 100%;
   padding: 0 8px;
   text-align: left;
+  font-size: 18px;
+  overflow: hidden;
 }
 
 .card-content-inner p {
