--- a/style/index.scss
+++ b/style/index.scss
@@ -77,7 +77,7 @@ header{
 
     li img {
         width: 100%;
-        height: 750px !important;
+        height: 650px !important;
     }
 }
 
@@ -154,12 +154,12 @@ header{
 
 .newsLeft {
     display: inline-block;
-    width: 560px;
+    width: 360px;
     margin-left: 10px;
 
     /*左边图*/
     a img {
-        width: 560px;
+    width: 360px;
         
         &:hover{
             @extend %boxshadow;
@@ -194,18 +194,20 @@ header{
 }
 
 .news-box {
-    width: 890px;
+    width: 750px;
 }
 
 
 /*新闻链接*/
 
 .new-item {
-    width: 400px;
+    width: 340px;
     margin: 0 30px 50px 0;
     display: inline-block;
     position: relative;
     transition: all .4s;
+    font-size: 18px;
+    float:right;
     /*新闻链接下面的横线*/
     
     a::before {
@@ -241,7 +243,7 @@ header{
 
 .mixLeft {
     display: inline-block;
-    width: 960px;
+    width: 760px;
     margin-left: 10px;
 }
 
@@ -279,7 +281,7 @@ header{
 
 .secient-content {
     float: right;
-    width: 600px;
+    width: 400px;
 }
 
 .secient-content p {
@@ -288,34 +290,21 @@ header{
     font-size: 17px;
 }
 
-.box2-content{
-    // display: -webkit-box;
-    // display: -ms-flexbox;
-    // display: flex;
-    // -ms-flex-pack: distribute;
-    // justify-content: space-around;
-    // -ms-flex-wrap: wrap;
-    // flex-wrap: wrap; 
-    // overflow: auto;
-}
 .box2-box{
     background-color: #6AC7CE;
-    width: 900px;
-    margin: 40px auto 0 auto;    
+    display: inline-block;
+    margin: 0 auto;    
     height: 250px;
     @include borderRadius(10px);
     box-shadow: 0 12px 24px 0 rgba(7,17,27,.2);
     overflow: hidden;    
 }
 .box2-item{
-    display: inline-block;
-    width:300px;
+    width:240px;
     height: 50%;
-    position: relative;
     float: left;
-    text-align: left;
     padding: 20px;
-   
+    font-size: 18px;
     border: 1px solid white;
     border-bottom: 0;
     border-left: 0;
@@ -357,11 +346,13 @@ header{
 /*mix的右边框*/
 
 .mixRight {
+    width: 400px;
     margin-top: 40px;
     float: right;
 }
 
 .pic-box {
+    width: 100%;
     margin: 40px 40px 60px 0;
     display: block;
     height: 250px;
@@ -408,7 +399,7 @@ header{
 }
 
 .pic-box img {
-    width: 300px;
+    width: 288px;
     height: 100%;
 }
 
@@ -432,7 +423,7 @@ header{
     position: relative;
 }
 .index-card{
-    width: 400px;
+    width: 300px;
     height: 90px;
     display: inline-block;
     margin-left: 70px;
@@ -485,6 +476,8 @@ header{
     width: 100%;
     padding: 0 8px;
     text-align: left;
+    font-size: 18px;
+    overflow: hidden;
     // text-align: center;
     p{
         color: white;    
