--- a/style/news.css
+++ b/style/news.css
@@ -1,12 +1,10 @@
 
 .flexbox{
-margin-bottom: 100px;
+    margin-bottom: 100px;
 }
 .boxRight{
-    width: 900px;
-    /* height: 896px; */
+    width: 800px;
     border: 1px solid rgb(230, 230, 230);
-    margin-right: 150px;
 }
 
 .tit{
@@ -28,14 +26,17 @@ margin-bottom: 100px;
 
 
 .detail ul{
-    margin-top: 38.4px;
-    margin-left: 64px;
-    padding-right: 8px;
+    /* margin-top: 38.4px;
+    margin-left: 64px; */
+    /* padding-right: 8px; */
+    width: 90%;
+    margin: 10px auto;
 }
 
-  .detail ul li{
+.detail ul li{
     /*list-style-type: square;*/
     margin-top: 12.8px;
+    font-size: 16px;
 }
 
   .detail ul li:before{
@@ -55,7 +56,7 @@ margin-bottom: 100px;
     /* float: left;
     top: 870.4px;
     left: 420px; */
-    width: 800px;
+    width: 90%;
     margin: 100px auto;
 }
 
