--- a/style/common.css
+++ b/style/common.css
@@ -24,7 +24,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol, dl, dt, d
 /*顶部栏*/
 header {
   width: 100%;
-  height: 121px;
+  height: 110px;
   background: #06A3B1;
   /* 一些不支持背景渐变的浏览器 */
   display: -webkit-box;
@@ -46,7 +46,7 @@ header {
 
 .logo_img {
   width: 320px;
-  height: inherit;
+  height: 100%;
 }
 
 /*顶部栏导航*/
