--- a/style/index.scss
+++ b/style/index.scss
@@ -221,9 +221,7 @@ header{
         -webkit-transition: width .4s;
         transition: width .4s;
     }
-    &:hover{
-        margin-top: -4px;
-    }
+   
     /*过渡效果*/
     &:hover>a::before {
         width: 0;
@@ -308,6 +306,7 @@ header{
     border: 1px solid white;
     border-bottom: 0;
     border-left: 0;
+    position: relative;
     p{
         display: -webkit-box;
         -webkit-box-orient: vertical;
