--- a/style/common.scss
+++ b/style/common.scss
@@ -13,34 +13,31 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol,dl, dt, dd
     color: #333;
     font-weight: normal;
     font-family: "Microsoft Yahei";
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .container{
     // width: 80%;
     margin: 0 auto;
-    width: 1200px;
-    
+    max-width: 1300px;
+    min-width: 1200px;
 }
 
 /*顶部栏*/
 
 header {
     width: 100%;
-    height: 110px;
-   
+    height: 72px;
+    position: relative;
     background:$green; /* 一些不支持背景渐变的浏览器 */  
     // background:-moz-linear-gradient(top, #64E464, $green);  
     // background:-webkit-gradient(linear, 0 0, 0 bottom, from(#64E464), to($green));  
     // background:-o-linear-gradient(top, #64E464, $green); 
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+  
     font-size: 15px;
-    box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
+    -webkit-box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
+            box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
     
 }
 
@@ -52,52 +49,39 @@ header {
 /*顶部栏logo*/
 
 .logo {
-    display: inline-block;
     height: 100%;
-    padding-left: 110px;
+    padding-left:20px;
+    float: left;
+    margin-right: 50px;
 }
 
 .logo_img {
-    width: 320px;
+    width: 200px;
     height: 100%;
 }
 
 
 /*顶部栏导航*/
 
-.nav {
-    margin-right: 60px;
-    height: 100%;
-    position: relative;
-}
-
-.nav_box {
-    height: inherit;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    /* padding-top: 35px; */
-    text-align: center;
-}
-
 
 /*顶部栏导航栏子栏目*/
 
 .nav_item {
-    height: inherit;
-    margin: 0 30px;
-    padding: 45px 0;
-
+   
+    float: left;
     a {
+        padding: 0 20px;
         display: block;
+        // color: #4D555D;
         color: white;
-        font-size: 25px;
-        min-width: 130px;
+        text-align: center;
+        font-size: 16px;
     }
 
     > a {
+        line-height: 72px;
+        
+        min-width: 130px;
         font-weight: bolder;
     }
 }
@@ -115,12 +99,11 @@ a:hover {
 /*导航栏箭头*/
 
 .nav_icon {
-    // display: inline-block;
+    display: inline-block;
     width: 30px;
     height: 30px;
-    background: url('../images/icons/nav_toBottom.png') no-repeat center;
-    background-size: 100% 100%;
-    float: right;
+    @include bis(url('../images/icons/nav_toBottom.png'));
+     margin-bottom: -9px;
     -webkit-transition: transform .5s;
     -webkit-transition: -webkit-transform .5s;
     transition: -webkit-transform .5s;
@@ -132,6 +115,8 @@ a:hover {
 /*导航栏让箭头旋转*/
 
 .nav_item>a:hover .nav_icon {
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
     transform: rotate(180deg);
     -ms-transform: rotate(180deg);
     /* IE 9 */
@@ -174,6 +159,7 @@ a:hover {
         border-right: 10px solid transparent;
         position: absolute;
         top: 0;
+        left: 50%;
         -webkit-transform: translate(-50%, -100%);
         transform: translate(-50%, -100%);
     }
@@ -191,7 +177,8 @@ footer{
     width: 100%;
     padding: 36px 0;
     background-color: #f8fafc;
-    box-shadow: 0 -2px 8px 0 rgba(7,17,27,.06)
+    -webkit-box-shadow: 0 -2px 8px 0 rgba(7,17,27,.06);
+            box-shadow: 0 -2px 8px 0 rgba(7,17,27,.06)
 }
 .footer-box{
     width: 80%;
