--- a/style/common.scss
+++ b/style/common.scss
@@ -18,7 +18,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol,dl, dt, dd
 }
 
 .container{
-    // width: 80%;
+    
     margin: 0 auto;
     max-width: 1300px;
     min-width: 1200px;
@@ -31,14 +31,12 @@ header {
     height: 72px;
     position: relative;
     background:$green; /* 一些不支持背景渐变的浏览器 */  
-    // background:-moz-linear-gradient(top, #64E464, $green);  
-    // background:-webkit-gradient(linear, 0 0, 0 bottom, from(#64E464), to($green));  
-    // background:-o-linear-gradient(top, #64E464, $green); 
-  
+   
+    box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
     font-size: 15px;
     -webkit-box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
             box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
-    
+    margin-bottom: 30px;
 }
 
 
@@ -176,6 +174,7 @@ a:hover {
 footer{
     width: 100%;
     padding: 36px 0;
+    margin-top: 50px;
     background-color: #f8fafc;
     -webkit-box-shadow: 0 -2px 8px 0 rgba(7,17,27,.06);
             box-shadow: 0 -2px 8px 0 rgba(7,17,27,.06)
