--- a/style/index.css
+++ b/style/index.css
@@ -416,11 +416,17 @@ body {
   position: relative;
 }
 
+.card-box {
+  display: flex;
+  justify-content: space-around;
+  flex-flow: wrap;
+}
+
 .index-card {
   width: 300px;
   height: 90px;
   display: inline-block;
-  margin-left: 70px;
+  margin: 0 50px;
   margin-bottom: 20px;
   box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
   transition: all .4s;
