--- a/style/common.css
+++ b/style/common.css
@@ -30,6 +30,7 @@ header {
   position: relative;
   background: #06A3B1;
   /* 一些不支持背景渐变的浏览器 */
+  text-align: center;
   box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
   font-size: 15px;
   -webkit-box-shadow: 10px 10px 50px 10px rgba(7, 17, 27, 0.06);
@@ -42,16 +43,21 @@ header {
   height: 100%;
   padding-left: 20px;
   float: left;
-  margin-right: 50px;
+  position: absolute;
 }
 
 .logo_img {
-  width: 200px;
-  height: 100%;
+  width: 300px;
+  height: 200%;
+  margin-top: -45px;
 }
 
 /*顶部栏导航*/
 /*顶部栏导航栏子栏目*/
+.nav_box {
+  display: inline-block;
+}
+
 .nav_item {
   float: left;
 }
