--- a/style/Ins.css
+++ b/style/Ins.css
@@ -192,6 +192,7 @@
     width: 98%;
     margin: 80px auto;
     text-align: center;
+   
 }
 
 .personList::after
@@ -211,17 +212,16 @@
 }
 
 
-
 .personList .list_item
 {
     display: block;
-    width:180px; ;
-    height:240px;
-    margin: 0 10px;
+    width:220px; ;
+    height:270px;
+    margin: 0 20px;
     text-align: center;
     border-radius: 10px;
     background: rgba(7,17,27,.05);
-    
+    box-shadow: 10px 10px 10px 0px rgba(7, 17, 27, 0.2);
     float: left;
 }
    
@@ -229,8 +229,8 @@
 .list_img
 {
     border-radius: 50%;
-    width: 80px;
-    height:80px;
+    width:100px;
+    height:100px;
     margin: 0  auto;
     position: relative;
     top: -15px;
@@ -275,18 +275,18 @@
     top:0;
 }
 .list_item:hover{
-    background-color: white;
+    background-color: #bebebe;
   
 }
 .list_item:hover > .list_img
 {
-    transform: scale(.7);
+    transform: scale(.8);
     transition: transform 1s;
     transform-origin: 50% top;
     
 }
 .list_item:hover > .list_content{
-    top:-25px;
+    top:-10px;
     transition: top 1s;
     overflow: visible;
     
