--- a/style/index.css
+++ b/style/index.css
@@ -23,13 +23,6 @@ body {
   padding: 0;
 }
 
-.container-types {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 36px 0 48px;
-}
-
 /*共用*/
 /*每个新闻框右上角的title*/
 .part-title {
@@ -77,10 +70,11 @@ body {
 
 /*轮播图banner*/
 .banner {
-  width: 100% !important;
+  width: 1200px !important;
   position: relative;
   overflow: auto;
   text-align: center;
+  margin: 0 auto;
 }
 
 .banner ul li {
@@ -138,7 +132,6 @@ body {
 /*科研资讯*/
 .info {
   margin-top: 50px;
-  width: 100%;
 }
 
 .info-title::after {
