--- a/style/common.scss
+++ b/style/common.scss
@@ -19,9 +19,9 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol,dl, dt, dd
 
 .container{
     
-    margin: 0 auto;
-    max-width: 1300px;
-    min-width: 1200px;
+    // margin: 0 auto;
+    // // max-width: 1300px;
+    // width: 1200px;
 }
 
 /*顶部栏*/
@@ -31,17 +31,25 @@ header {
     height: 90px;
     position: relative;
     background:$green; /* 一些不支持背景渐变的浏览器 */  
-    text-align: center;
+    // text-align: center;
     box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
     font-size: 15px;
     -webkit-box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
             box-shadow: 10px 10px 50px 10px rgba(7,17,27,.06);
     margin-bottom: 30px;
+    min-width: 1600px;
+    padding: 0 280px;
+    text-align: center;
 }
 
 
 
-// .toMore
+.container-types{
+    width:1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 36px 0 48px;
+}
 
 
 /*顶部栏logo*/
@@ -51,6 +59,7 @@ header {
     padding-left:20px;
     float: left;
     position: absolute;
+    left: 0;
 }
 
 .logo_img {
@@ -68,13 +77,13 @@ header {
     // position: absolute;
     // margin: 0 auto;
     display: inline-block;
-    // display: block;
+    margin: 0 auto;
 }
 .nav_item {
    
     float: left;
+    margin: 0 10px;
     a {
-        padding: 0 20px;
         display: block;
         // color: #4D555D;
         color: white;
@@ -84,8 +93,7 @@ header {
 
     > a {
         line-height: 90px;
-        
-        min-width: 130px;
+        width: 100px;
         font-weight: bolder;
     }
 }
