--- a/style/index.scss
+++ b/style/index.scss
@@ -1,3 +1,10 @@
+/*
+ * @Author: 肖志豪 
+ * @Date: 2017-10-06 11:08:26 
+ * @Last Modified by:   肖志豪 
+ * @Last Modified time: 2017-10-06 11:08:26 
+ */
+
 @import 'mixin.scss';
 
 body {
