--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+/*
+ * @Author: 肖志豪 
+ * @Date: 2017-10-06 11:08:26 
+ * @Last Modified by:   肖志豪 
+ * @Last Modified time: 2017-10-06 11:08:26 
+ */
 .box2-mask {
   position: absolute;
   top: 0;
