--- a/style/index.css
+++ b/style/index.css
@@ -2,8 +2,8 @@
 /*
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
- * @Last Modified by:   肖志豪 
- * @Last Modified time: 2017-10-06 11:08:26 
+ * @Last Modified by: 肖志豪
+ * @Last Modified time: 2017-10-07 01:23:42
  */
 .box2-mask {
   position: absolute;
@@ -204,6 +204,7 @@ body {
   width: 340px;
   margin: 0 30px 50px 0;
   position: relative;
+  -webkit-transition: all .4s;
   transition: all .4s;
   font-size: 18px;
   float: right;
@@ -293,6 +294,7 @@ body {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   border-radius: 10px;
+  -webkit-box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
   box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
   overflow: hidden;
 }
@@ -348,7 +350,6 @@ body {
 }
 
 .pic-box {
-  width: 100%;
   margin: 40px 40px 60px 0;
   display: block;
   height: 250px;
@@ -416,8 +417,12 @@ body {
 }
 
 .card-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -ms-flex-flow: wrap;
   flex-flow: wrap;
 }
 
@@ -427,11 +432,14 @@ body {
   display: inline-block;
   margin: 0 50px;
   margin-bottom: 20px;
+  -webkit-box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
   box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
+  -webkit-transition: all .4s;
   transition: all .4s;
 }
 
 .index-card:hover {
+  -webkit-box-shadow: 0 15px 35px 5px rgba(7, 17, 27, 0.2);
   box-shadow: 0 15px 35px 5px rgba(7, 17, 27, 0.2);
 }
 
