--- a/style/index.scss
+++ b/style/index.scss
@@ -1,8 +1,8 @@
 /*
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
- * @Last Modified by:   肖志豪 
- * @Last Modified time: 2017-10-06 11:08:26 
+ * @Last Modified by: 肖志豪
+ * @Last Modified time: 2017-10-07 01:23:42
  */
 
 @import 'mixin.scss';
@@ -201,6 +201,7 @@ body {
     width: 340px;
     margin: 0 30px 50px 0;
     position: relative;
+    -webkit-transition: all .4s;
     transition: all .4s;
     font-size: 18px;
     float:right;
@@ -290,7 +291,8 @@ body {
     margin: 0 auto;    
     height: 250px;
     @include borderRadius(10px);
-    box-shadow: 0 12px 24px 0 rgba(7,17,27,.2);
+    -webkit-box-shadow: 0 12px 24px 0 rgba(7,17,27,.2);
+            box-shadow: 0 12px 24px 0 rgba(7,17,27,.2);
     overflow: hidden;    
 }
 .box2-item{
@@ -347,7 +349,6 @@ body {
 }
 
 .pic-box {
-    width: 100%;
     margin: 40px 40px 60px 0;
     display: block;
     height: 250px;
@@ -418,9 +419,13 @@ body {
     position: relative;
 }
 .card-box{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-flow: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-flow: wrap;
+        flex-flow: wrap;
 }
 .index-card{
     width: 300px;
@@ -428,12 +433,15 @@ body {
     display: inline-block;
     margin: 0 50px;
     margin-bottom: 20px;
-    box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
+    -webkit-box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
+            box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
+    -webkit-transition: all .4s;
     transition: all .4s;
    
 
     &:hover{
-        box-shadow: 0 15px 35px 5px rgba(7,17,27,0.2);
+        -webkit-box-shadow: 0 15px 35px 5px rgba(7,17,27,0.2);
+                box-shadow: 0 15px 35px 5px rgba(7,17,27,0.2);
     
     }
 }
