--- a/style/Ins.css
+++ b/style/Ins.css
@@ -178,6 +178,7 @@
     content: "\02022";
     color: #8c0000;
     font-size: 28px;
+    margin-right: 10px;
 }
 
 .colu_news_list li a
@@ -326,7 +327,15 @@
 }
 
 
+.colu_name h3:hover
+{
+    color: #9b0000;
+}
 
+.colu_news_list li a:hover
+{
+    color: #9b0000;
+}
 
    /* -- Ins 机构介绍内容css  end--*/
 
