--- a/style/common.scss
+++ b/style/common.scss
@@ -17,7 +17,34 @@ body, div, span, header, footer, nav, section, aside, article, ul, ol,dl, dt, dd
             box-sizing: border-box;
 }
 
+/*共用*/
+/*每个框左上角的title*/
 
+.part-title {
+    display: block;
+    font-weight: bolder;
+    font-size: 30px;
+    position: relative;
+    margin-bottom: 40px;
+}
+/*标题后面的英文*/
+.part-title::after {
+    content: "";
+    color: rgb(153, 153, 153);
+    font-style: italic;
+    font-size: 20px;
+    margin-left: 8px;
+}
+/*标题下面的横线*/
+.part-title::before {
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: #006771;
+    margin-bottom: -10px;
+    position: absolute;
+    bottom: 0;
+}
 /*顶部栏*/
 
 header {
