--- a/style/person.css
+++ b/style/person.css
@@ -1,114 +1,88 @@
-.person
+
+
+.detail
 {
-    width: 98%;
-    margin: 60px auto;
-}
-
-.personList
-{
-    width: 98%;
-    margin: 80px auto;
-    text-align: center;
-}
-
-.personList::after
-{
-    clear: both;
-    content: '';
-    display: block;
-
-}
-
-.personList::before
-{
-    clear: both;
-    content: '';
-    display: block;
-
-}
-
-
-
-.personList .list_item
-{
-    display: block;
-    width:180px; ;
-    height:240px;
-    margin: 0 10px;
-    text-align: center;
-    border-radius: 10px;
-    background: rgba(7,17,27,.05);
-    
-    float: left;
-}
-   
-
-.list_img
-{
-    border-radius: 50%;
-    width: 80px;
-    height:80px;
-    margin: 0  auto;
-    position: relative;
-    top: -15px;
-  
-
-}
-
-
-.list_name
-{
-    font-size: 15px;
-    text-align: center;
-    width: 100%;
-    margin: 0  auto;
-    display: block;
-    position: relative;
-    top: -10px;
-}
-
-.list_title
-{
-    font-size: 15px;
-    width: 100%;
-    margin: 0  auto;
-    text-align: center;
-    display: block;
-    position: relative;
-    top: -10px;
-}
-
-.list_content
-{
-    display: block;
-    width: 140px;
-    height: 100px;
-    font-size: 10px;   
+    width: 90%;
     margin: 0 auto;
-    text-align: center;
-    line-height:20px;
-    overflow: hidden;
-    position: relative;
-    top:0;
+    box-shadow: -5px 10px 6px 0 #B5B0B0;
+    background:rgba(255, 255, 255, 0.97);
 }
-.list_item:hover{
-    background-color: white;
+
+.top
+{
+    width: 60%;
+    margin: 0 auto;
+}
+.cont
+{
+    float: left;
+    text-align: center;
+    margin: 60px 10px;
+    line-height: 30px;
+}
+
+.cont::after
+{
+    clear: both;
+    content: '';
+    display: block;
+}
+
+
+.top img 
+{
+    width: 300px;
+    height: 300px;
+
+}
+
+.name
+{
+    font-size: 24px;
+    color: #8A7A7A;
+    display: block;
+
+
+}
+
+.title
+{
+    
+    font-size: 20px;
+    color: #8A7A7A;
+    display: block;
+    
+}
+
+.job
+{
+    font-size: 16px;
+    color: #8A7A7A;
+    display: block;
+    width: 400px;
+
+}
+
+.top::after
+{
+    content: '';
+    display: block;
+    border-bottom: 4px solid #D37575;
+}
+
+.main
+{
+    width: 60%;
+    margin: 0 auto;
+    line-height: 40px;
+    padding: 30px 0;
+}
+
+.main p
+{
+    text-indent: 2em;
+    font-size: 18px;
+    color: #514A4A;
   
 }
-.list_item:hover > .list_img
-{
-    transform: scale(.7);
-    transition: transform 1s;
-    transform-origin: 50% top;
-    
-}
-.list_item:hover > .list_content{
-    top:-25px;
-    transition: top 1s;
-    overflow: visible;
-    
-}
-.list_item:hover > .list_name,.list_item:hover > .list_title
-{
-    display: none;
-}
+
