--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
  * @Last Modified by: 肖志豪
- * @Last Modified time: 2017-10-07 01:23:42
+ * @Last Modified time: 2017-10-08 17:33:14
  */
 .box2-mask {
   position: absolute;
@@ -49,10 +49,12 @@ body {
 /*轮播图banner*/
 .banner {
   width: 1200px !important;
+  height: 650px;
   position: relative;
   overflow: auto;
   text-align: center;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .banner ul li {
@@ -60,7 +62,7 @@ body {
 }
 
 .banner li img {
-  width: 100%;
+  width: 1200px !important;
   height: 650px !important;
 }
 
@@ -97,6 +99,8 @@ body {
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
+  /*兼容ie*/
+  border: 0px;
 }
 
 #al {
@@ -158,8 +162,13 @@ body {
 
 .newsLeft p {
   color: gray;
+  max-height: 100px;
   font-size: 15px;
   margin-top: 10px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
 }
 
 /*科研资讯-右*/
@@ -174,6 +183,7 @@ body {
 /*新闻链接*/
 .new-item {
   width: 340px;
+  height: 48px;
   margin: 0 30px 50px 0;
   position: relative;
   -webkit-transition: all .4s;
@@ -182,6 +192,15 @@ body {
   float: right;
   /*新闻链接下面的横线*/
   /*过渡效果*/
+}
+
+.new-item a {
+  display: block;
+  height: 100%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
 
 .new-item a::before {
@@ -254,6 +273,11 @@ body {
   color: gray;
   margin-top: 20px;
   font-size: 17px;
+  max-height: 110px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
 }
 
 .box2-box {
@@ -275,7 +299,7 @@ body {
   width: 240px;
   height: 50%;
   float: left;
-  padding: 20px;
+  padding: 25px 20px;
   font-size: 18px;
   border: 1px solid white;
   border-bottom: 0;
@@ -284,11 +308,12 @@ body {
   /*幕布动画效果*/
 }
 
-.box2-item p {
+.box2-item > p {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden;
+  height: 100%;
   color: white;
 }
 
@@ -402,7 +427,7 @@ body {
   width: 300px;
   height: 90px;
   display: inline-block;
-  margin: 0 50px;
+  margin: 0 45px;
   margin-bottom: 20px;
   -webkit-box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
   box-shadow: 0 12px 24px 0 rgba(7, 17, 27, 0.2);
@@ -440,7 +465,7 @@ body {
 
 .card-content {
   width: 80%;
-  height: 100%;
+  height: 90px;
   float: left;
   display: table;
   position: relative;
@@ -458,6 +483,12 @@ body {
 }
 
 .card-content-inner p {
+  height: 70px;
+  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
   color: white;
   position: relative;
 }
