--- a/style/index.scss
+++ b/style/index.scss
@@ -2,7 +2,7 @@
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
  * @Last Modified by: 肖志豪
- * @Last Modified time: 2017-10-07 01:23:42
+ * @Last Modified time: 2017-10-08 17:33:14
  */
 
 @import 'mixin.scss';
@@ -36,18 +36,19 @@ body {
 
 .banner {
     width: 1200px !important;
+    height: 650px;
     position: relative;
     overflow: auto;
     text-align: center;
     margin: 0 auto;
-
+    overflow: hidden;
 
     ul li {
         float: left;
     }
 
     li img {
-        width: 100%;
+        width: 1200px !important;
         height: 650px !important;
     }
 }
@@ -85,6 +86,8 @@ body {
     transform: translateY(-50%);
     width: 50px;
     height: 50px;
+     /*兼容ie*/
+     border: 0px;
 }
 
 #al {
@@ -151,8 +154,13 @@ body {
     /*左边新闻内容摘要*/
     p {
         color: gray;
+        max-height: 100px;
         font-size: 15px;
         margin-top: 10px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 5;
+        overflow: hidden;
     }
 }
 
@@ -172,14 +180,24 @@ body {
 
 .new-item {
     width: 340px;
+    height: 48px;
     margin: 0 30px 50px 0;
     position: relative;
     -webkit-transition: all .4s;
     transition: all .4s;
     font-size: 18px;
     float:right;
+   
     /*新闻链接下面的横线*/
     
+    a{  
+        display: block;
+        height: 100%;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+    }
     a::before {
         content: '';
         position: absolute;
@@ -256,6 +274,11 @@ body {
     color: gray;
     margin-top: 20px;
     font-size: 17px;
+    max-height: 110px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden;
 }
 
 .box2-box{
@@ -272,18 +295,21 @@ body {
     width:240px;
     height: 50%;
     float: left;
-    padding: 20px;
+    padding: 25px 20px;
     font-size: 18px;
     border: 1px solid white;
     border-bottom: 0;
     border-left: 0;
     position: relative;
-    p{
+    
+    > p{
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3;
         overflow: hidden;
-        color: white;    
+        height: 100%;
+        color: white;
+    
     }
    
     &:hover > p{
@@ -408,7 +434,7 @@ body {
     width: 300px;
     height: 90px;
     display: inline-block;
-    margin: 0 50px;
+    margin: 0 45px;
     margin-bottom: 20px;
     -webkit-box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
             box-shadow: 0 12px 24px 0 rgba(7,17,27,0.2);
@@ -448,7 +474,7 @@ body {
 
 .card-content{
     width: 80%;
-    height: 100%;
+    height: 90px;
     float: left;    
     display: table;
     position: relative;
@@ -464,7 +490,13 @@ body {
     font-size: 18px;
     overflow: hidden;
     // text-align: center;
-    p{
+    p{  
+        height: 70px;
+        display: block;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
         color: white;    
         position: relative;
     }
