--- a/style/index.scss
+++ b/style/index.scss
@@ -2,7 +2,7 @@
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
  * @Last Modified by: 肖志豪
- * @Last Modified time: 2017-10-08 17:33:14
+ * @Last Modified time: 2017-10-08 22:09:32
  */
 
 @import 'mixin.scss';
@@ -23,14 +23,17 @@ body {
     &::after {
         content: '';
         display: inline-block;
-        width: 20px;
-        height: 20px;
+        width: 15px;
+        height: 15px;
         margin-left: 10px;
+        margin-bottom: 2px;
         @include bis(url("../images/icons/toMore.png"));
        
     }
 }
-
+.part-title .toMore{
+    float: right;
+}
 
 /*轮播图banner*/
 
