--- a/style/Ins.css
+++ b/style/Ins.css
@@ -32,7 +32,7 @@
 .personList
 {
     width: 98%;
-    margin: 80px auto;
+    margin: 0px auto;
     text-align: center;
    
 }
@@ -59,7 +59,7 @@
     display: block;
     width:220px; ;
     height:270px;
-    margin: 0 20px;
+    margin: 30px 20px;
     text-align: center;
     border-radius: 10px;
     background: rgba(7,17,27,.05);
