--- a/style/common.css
+++ b/style/common.css
@@ -55,7 +55,6 @@ img {
 /*顶部栏*/
 header {
   width: 100%;
-  height: 90px;
   position: relative;
   background: #06A3B1;
   /* 一些不支持背景渐变的浏览器 */
@@ -66,8 +65,28 @@ header {
   box-shadow: 10px 10px 50px 10px rgba(7, 17, 27, 0.06);
   margin-bottom: 30px;
   min-width: 1600px;
-  padding: 0 280px  0 360px;
   text-align: center;
+}
+
+.header_banner {
+  background: #00868B;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  letter-spacing: 10px;
+}
+
+.header_banner .banner_a {
+  font-size: 22px;
+  text-align: center;
+  color: #F5FFFA;
+  margin: 2px;
+}
+
+.header_nav {
+  width: 100%;
+  padding: 0 280px  0 360px;
+  height: 90px;
 }
 
 .container-types {
@@ -88,7 +107,7 @@ header {
 
 .logo_img {
   width: 300px;
-  height: 200%;
+  height: 150%;
   margin-top: -45px;
   /*兼容ie*/
   border: 0px;
