--- a/style/common.css
+++ b/style/common.css
@@ -93,7 +93,7 @@ header {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding: 36px 0 48px;
+  padding: 10px 0;
 }
 
 /*顶部栏logo*/
