--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
  * @Last Modified by: 肖志豪
- * @Last Modified time: 2017-10-08 22:09:32
+ * @Last Modified time: 2017-10-12 00:34:25
  */
 .box2-mask {
   position: absolute;
@@ -52,73 +52,37 @@ body {
 }
 
 /*轮播图banner*/
-.banner {
-  width: 1200px !important;
-  height: 650px;
-  position: relative;
-  overflow: auto;
-  text-align: center;
-  margin: 0 auto;
-  overflow: hidden;
-}
-
-.banner ul li {
-  float: left;
-}
-
-.banner li img {
-  width: 1200px !important;
-  height: 650px !important;
-}
-
-.dots {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 10%;
-}
-
-.dots li {
+.banner a {
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  margin: 0 4px;
-  text-indent: -999em;
-  border: 2px solid #fff;
-  border-radius: 6px;
-  cursor: pointer;
-  opacity: 0.4;
-  -webkit-transition: opacity .5s;
-  transition: opacity .5s;
+  height: 660px;
 }
 
-.dots li.active {
-  background: #fff;
-  opacity: 1;
+.banner a img {
+  width: 100%;
+  height: 100%;
 }
 
-.arrow {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+.banner .slick-arrow {
   width: 50px;
   height: 50px;
-  /*兼容ie*/
-  border: 0px;
+  z-index: 100;
 }
 
-#al {
-  left: 15px;
+.slick-prev {
+  margin-left: 40px;
 }
 
-#ar {
-  right: 15px;
+.slick-next {
+  margin-right: 50px;
+}
+
+.slick-dots {
+  margin-top: -50px;
 }
 
 /*科研资讯*/
 .info {
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .info-title::after {
