--- a/style/index.scss
+++ b/style/index.scss
@@ -2,7 +2,7 @@
  * @Author: 肖志豪 
  * @Date: 2017-10-06 11:08:26 
  * @Last Modified by: 肖志豪
- * @Last Modified time: 2017-10-08 22:09:32
+ * @Last Modified time: 2017-10-12 00:34:25
  */
 
 @import 'mixin.scss';
@@ -38,74 +38,37 @@ body {
 /*轮播图banner*/
 
 .banner {
-    width: 1200px !important;
-    height: 650px;
-    position: relative;
-    overflow: auto;
-    text-align: center;
-    margin: 0 auto;
-    overflow: hidden;
-
-    ul li {
-        float: left;
-    }
-
-    li img {
-        width: 1200px !important;
-        height: 650px !important;
-    }
-}
-
-
-.dots {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 10%;
-
-    li {
+    a{
         display: inline-block;
-        width: 20px;
-        height: 20px;
-        margin: 0 4px;
-        text-indent: -999em;
-        border: 2px solid #fff;
-        border-radius: 6px;
-        cursor: pointer;
-        opacity: 0.4;
-        -webkit-transition: opacity .5s;
-        transition: opacity .5s;
+        height: 660px;
+        
+    }
+        a img {
+        width:100%;
+        height:100%;
     }
 }
 
-.dots li.active {
-    background: #fff;
-    opacity: 1;
-}
-.arrow {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+
+.banner .slick-arrow{
     width: 50px;
     height: 50px;
-     /*兼容ie*/
-     border: 0px;
+    
+    z-index: 100;
 }
-
-#al {
-    left: 15px;
+.slick-prev{
+    margin-left: 40px;
 }
-
-#ar {
-    right: 15px;
+.slick-next{
+    margin-right: 50px;
 }
-
-
+.slick-dots{
+    margin-top: -50px;
+}
 /*科研资讯*/
 
 .info {
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .info-title::after {
