--- a/style/layoutTwoCol.css
+++ b/style/layoutTwoCol.css
@@ -14,37 +14,21 @@
 }
 
 /*左侧导航栏上面的装饰*/
-.navTop{
+.navTitle{
     width: 100%;
     height: 64px;
+    line-height: 64px;
+    
     margin-bottom: 25.6px;
     position: relative;
+    border-bottom: 5px solid #FF9D54;
+    
 }
 
-.navTop .image{
-    height: 100%;
-}
-
-.navTop .image img{
-    width: 45%;
-    height: 100%;
-}
-
-/*横线*/
-.navTop .line{
-    position: absolute;
-    left: 45%;
-    bottom: 0;
-    width: 55%;
-    height: 3.84px;
-    background: #FF9D54;
-}
 
 /*文字*/
-.boxLeft .navTop a{
-    position: absolute;
-    left: 20%;
-    bottom: 21.76px;
+.navTitle a{
+
     font-size: 25.6px;
     text-decoration: none;
     color:#6C6E6C;
@@ -72,7 +56,7 @@
     cursor: pointer;
 }
 
-.boxLeft .itemUl .itemLi a {
+.itemLi a {
     display: block;
     width: 100%;
     
@@ -84,7 +68,7 @@
     padding-left: 12.8px;
 }
 
-.boxLeft .itemUl .itemLi a:hover {
+.itemLi a:hover {
     color: #FF9D54;
 }
 
@@ -92,12 +76,16 @@
     background: #FF9D54;
     color: whitesmoke;
 }
-
-/*左侧导航栏下面的图片*/
-.boxLeft .navBottom img{
-    margin-top:25.6px;
-    width: 100%;
-    height: 384px;
+.hotArticle{
+    margin-top: 50px;
+}
+.hot-Item::before{
+    content: "\02022";
+    color: #006771;
+    font-size: 25.6px;
+}
+.hot-Item a{
+    margin-left: 10px;
 }
 
 /*默认选中第一个,用ID选择器提高优先级*/
